# computorv2

./: .gitignore  CMakeLists.txt  Makefile  README.md  computor  main.cpp  run_tests.sh
includes/: Fraction.hpp  Interpreter.hpp  Lexer.hpp  Maths.hpp  Node.hpp  Parser.hpp  Plotter.hpp  RuntimeTypes.hpp  Settings.hpp  Visitors.hpp  computor.hpp  types.hpp
includes/Interpreter/: Interpreter.hpp  InterpreterCommandHandler.hpp  InterpreterEvaluator.hpp  TokenPreprocessor.hpp
includes/Nodes/: BaseNode.hpp  BinaryOpNode.hpp  BuiltinFunctionNode.hpp  FunctionCallNode.hpp  ImaginaryNode.hpp  MatrixNode.hpp  Nodes.hpp  NumberNode.hpp  UnaryOpNode.hpp  VariableNode.hpp
includes/Types/: Complex.hpp  Matrix.hpp  Matrix.tpp  Polynomial.hpp  Real.hpp  Token.hpp
includes/Visitors/: BinaryOpVisitor.hpp  UnaryOpVisitor.hpp  Visitors.hpp
includes/types/: Complex.hpp  Matrix.hpp  Matrix.tpp  Real.hpp  Token.hpp
srcs/: Fraction.cpp  Interpreter.cpp  Lexer.cpp  Maths.cpp  Parser.cpp  Plotter.cpp  Visitors.cpp  lexer.cpp  main.cpp  parse_and_assign.cpp  parsing.cpp  pre_pass.cpp
srcs/Interpreter/: Interpreter.cpp  InterpreterCommandHandler.cpp  InterpreterEvaluator.cpp  TokenPreprocessor.cpp
srcs/Maths/: Maths_arithmetic.cpp  Maths_exponential.cpp  Maths_trig.cpp
srcs/Nodes/: BinaryOpNode.cpp  BuiltinFunctionNode.cpp  FunctionCallNode.cpp  ImaginaryNode.cpp  MatrixNode.cpp  NumberNode.cpp  UnaryOpNode.cpp  VariableNode.cpp
srcs/Types/: Complex.cpp  Polynomial.cpp  Real.cpp
srcs/Types/Complex/: Complex_core.cpp  Complex_free_ops.cpp  Complex_io.cpp  Complex_ops_addsub.cpp  Complex_ops_divmod.cpp  Complex_ops_mul.cpp  Complex_pow.cpp
srcs/Types/Polynomial/: Polynomial_core.cpp  Polynomial_eval.cpp  Polynomial_free_ops.cpp  Polynomial_io.cpp  Polynomial_ops_addsub.cpp  Polynomial_ops_divmod.cpp  Polynomial_ops_mul.cpp  Polynomial_pow.cpp  Polynomial_solve.cpp
srcs/Visitors/: BinaryOpVisitor.cpp  UnaryOpVisitor.cpp
srcs/types/: Complex.cpp  Matrix.cpp  Real.cpp
tests/: actual.txt  expected.txt  input.txt
tests/actual/: 01_basics.txt
tests/inputs/: 01_basics.txt  02_polynomials.txt
types/includes/: Complex.hpp  Matrix.hpp  Real.hpp
types/srcs/: Complex.cpp  Matrix.cpp  Real.cpp
